extending OSC interface for transport, adding custom menues example
git-svn-id: file:///tmp/Eisenkraut@127 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/osc.html
+++ b/trunk/help/osc.html
@@ -123,6 +123,12 @@
 <LI><CODE>/doc/&lt;<VAR>address</VAR>&gt;/transport</CODE><UL>
 	<LI><CODE>play [&lt;(float) <VAR>rate</VAR>&gt;]</CODE></LI>
 	<LI><CODE>stop</CODE></LI>
+	<LI>query properties:
+		<TABLE>
+		<TR><TD><CODE>position</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(long) <VAR>currentFrame</VAR>&gt;</CODE></TD></TR>
+		<TR><TD><CODE>running</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(int) <VAR>running</VAR>=(0|1)&gt;</CODE></TD></TR>
+		</TABLE>
+	</LI>
 </UL></LI>
 <LI><CODE>/doc/&lt;<VAR>address</VAR>&gt;/timeline</CODE><UL>
 	<LI><CODE>position &lt;(long) <VAR>frame</VAR>&gt;</CODE></LI>
