adding osc query for document path. fixing bug 2151940
git-svn-id: file:///tmp/Eisenkraut@136 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/osc.html
+++ b/trunk/help/osc.html
@@ -70,6 +70,7 @@
 		<TR><TD><CODE>dirty</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(int) <VAR>isDirty</VAR>=(0|1)&gt;</CODE></TD></TR>
 		<TR><TD><CODE>editMode</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(String) <VAR>mode</VAR>=("insert"|"overwrite"|"mix")&gt;</CODE></TD></TR>
 		<TR><TD><CODE>name</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(String) <VAR>name</VAR>&gt;</CODE></TD></TR>
+		<TR><TD><CODE>file</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(String) <VAR>path[:path2...]</VAR>&gt;</CODE></TD></TR>
 		</TABLE>
 	</LI>
 </UL></LI>
