--- a/trunk/help/copyright.html
+++ b/trunk/help/copyright.html
@@ -34,9 +34,10 @@ Though I give no guarantees about whether or when I reply to mails and requests,
 To contact me, write an email to <code>contact&nbsp;at&nbsp;sciss.de</code>. Snail mail address is:</P>
 <BLOCKQUOTE>
 Hanns Holger Rutz<br>
-Geschwister-Scholl-Str. 2<br>
-99423 Weimar<br>
-Germany
+13 Nepean Street<br>
+PL2 1QJ<br>
+Plymouth, Devon<br>
+United Kingdom
 </BLOCKQUOTE>
 <P>
 Before sending snail mail, contact me electronically to ensure the address is still valid.
