fixes some keyboard shortcuts on linux / no-numpad

--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -19,8 +19,8 @@ The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Comma
 <LI><tt>Ctrl</tt>+<tt>Space</tt> : play selection</LI>
 <LI><tt>Shift</tt>+<tt>Space</tt> : play at half speed</LI>
 <LI><tt>Alt</tt>+<tt>Shift</tt>+<tt>Space</tt> : play at double speed</LI>
-<LI><tt>Numpad-/</tt> : toggle loop playback</LI>
-<LI><tt>Numpad-1 and 2</tt> : rewind and fast forward</LI>
+<LI><tt>/</tt> (Slash) : toggle loop playback</LI>
+<LI><tt>Open-Bracket and Closing-Bracket</tt> : rewind and fast forward</LI>
 <!-- <LI><tt>Numpad-*</tt> : enabled / disable <A HREF="RealtimeDialog.html">realtime plug-in</A></LI> -->
 </UL>
 <P>&nbsp;&nbsp;&nbsp;<B>General Editing</B>:</P>
