--- a/help/TransportTools.html
+++ b/help/TransportTools.html
@@ -10,7 +10,7 @@
 <IMG SRC="iconTransportTools.png" ALT="Screenshot of Transport Controls">
 <p>
 The transport controls are located in the top part of each <A HREF="TimelineFrame.html">document frame</A>. From left to right
-you see the Rewind, Stop, Play, Fast Forward button, and the Loop toggle. Keyboard shortcuts are <tt>Space</tt> or <tt>Numpad-0</tt> for Play/Stop, <tt>Numpad-1</tt> and <tt>Numpad-2</tt> for Rewind and FFwd, <tt>Numpad-/</tt> for Loop toggle. <tt>Shift</tt>+<tt>Space</tt> will play back at half speed, <tt>Shift</tt>+<tt>Alt</tt>+<tt>Space</tt> will play back at double speed.
+you see the Rewind, Stop, Play, Fast Forward button, and the Loop toggle. Keyboard shortcuts are <tt>Space</tt> or <tt>Numpad-0</tt> for Play/Stop, <tt>Open-Bracket</tt> and <tt>Closing-Bracket</tt> for Rewind and FFwd, <tt>/</tt> (Slash) for Loop toggle. <tt>Shift</tt>+<tt>Space</tt> will play back at half speed, <tt>Shift</tt>+<tt>Alt</tt>+<tt>Space</tt> will play back at double speed.
 </p><p>
 Loop playback: the loop playback uses the current timeline selection and can be
 altered using the <A HREF="TimelineAxis.html">timeline axis</A>, the <A HREF="TimelineToolPointer.html">timeline pointer tool</A> or the <A HREF="ObserverTimeline.html">observer time tab</a>.
