alternative to Tab key for quick region movement

--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -39,8 +39,8 @@ The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Comma
 <LI><tt>Cursor Left/Right</tt> : scroll to begin/end of selection</LI>
 <LI><tt>Cursor Up/Down</tt> : set timeline position to selection begin/end and clear selection</LI>
 <LI><tt>Alt</tt>+<tt>Cursor Up/Down</tt> : set timeline position to selection begin/end</LI>
-<LI><tt>Tab</tt> : select next region between adjectant markers</LI>
-<LI><tt>Alt</tt>+<tt>Tab</tt> : select previous region between adjectant markers</LI>
+<LI><tt>Tab</tt> : select next region between adjacent markers</LI>
+<LI><tt>Alt</tt>+<tt>Tab</tt> : select previous region between adjacent markers</LI>
 <LI><tt>Shift</tt>+<tt>Tab</tt> : extend selection to next marker</LI>
 <LI><tt>Alt</tt>+<tt>Shift</tt>+<tt>Tab</tt> : extend selection to previous marker</LI>
 <LI><tt>Alt</tt>+<tt>F</tt> : fit visible span to selection</LI>
@@ -49,6 +49,8 @@ The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Comma
 <LI><tt>M</tt> : drop marker at current timeline position. only effective if marker display is enabled from the view menu.</LI>
 <LI><tt>G</tt> : open go-to-time dialog</LI>
 </UL>
+<P>Instead of <tt>Tab</tt> you can also use <tt>Less</tt> which is the <tt>&lt;</tt> character, but on a US Apple keyboard
+corresponds to the <tt>&sect;</tt> key between <tt>Escape</tt> and <tt>Tab</tt></P>
 <P>&nbsp;&nbsp;&nbsp;<B>Zooming</B>:</P>
 <UL>
 <LI><tt>Ctrl</tt>+<tt>Cursor Left/Right</tt> : horizontal zoom out/in</LI>
