--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -50,7 +50,9 @@ The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Comma
 <LI><tt>G</tt> : open go-to-time dialog</LI>
 </UL>
 <P>Instead of <tt>Tab</tt> you can also use <tt>Less</tt> which is the <tt>&lt;</tt> character, but on a US Apple keyboard
-corresponds to the <tt>&sect;</tt> key between <tt>Escape</tt> and <tt>Tab</tt></P>
+corresponds to the <tt>&sect;</tt> key between <tt>Escape</tt> and <tt>Tab</tt>; and <tt>Back-Quote</tt>, which on
+a UK Apple keyboard corresponds to the <tt>`</tt> key with that same location. Here the <tt>Alt</tt> modifier
+is replaced by <tt>Control</tt>, so instead of <tt>Alt</tt>+<tt>Tab</tt>, you can use <tt>Control</tt>+<tt>Back-Quote</tt>.</P>
 <P>&nbsp;&nbsp;&nbsp;<B>Zooming</B>:</P>
 <UL>
 <LI><tt>Ctrl</tt>+<tt>Cursor Left/Right</tt> : horizontal zoom out/in</LI>
