ahm. This is a US keyboard not UK. Why on earth did they decide to put different keys above Tab on laptop versus external keyboard?

--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -49,9 +49,9 @@ The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Comma
 <LI><tt>M</tt> : drop marker at current timeline position. only effective if marker display is enabled from the view menu.</LI>
 <LI><tt>G</tt> : open go-to-time dialog</LI>
 </UL>
-<P>Instead of <tt>Tab</tt> you can also use <tt>Less</tt> which is the <tt>&lt;</tt> character, but on a US Apple keyboard
-corresponds to the <tt>&sect;</tt> key between <tt>Escape</tt> and <tt>Tab</tt>; and <tt>Back-Quote</tt>, which on
-a UK Apple keyboard corresponds to the <tt>`</tt> key with that same location. Here the <tt>Alt</tt> modifier
+<P>Instead of <tt>Tab</tt> you can also use <tt>Less</tt> which is the <tt>&lt;</tt> character, but on a US external
+Apple keyboard corresponds to the <tt>&sect;</tt> key between <tt>Escape</tt> and <tt>Tab</tt>; and <tt>Back-Quote</tt>,
+which on a US Apple laptop keyboard corresponds to the <tt>`</tt> key with that same location. Here the <tt>Alt</tt> modifier
 is replaced by <tt>Control</tt>, so instead of <tt>Alt</tt>+<tt>Tab</tt>, you can use <tt>Control</tt>+<tt>Back-Quote</tt>.</P>
 <P>&nbsp;&nbsp;&nbsp;<B>Zooming</B>:</P>
 <UL>
