--- a/help/copyright.html
+++ b/help/copyright.html
@@ -11,7 +11,7 @@
 Eisenkraut is (C)opyright by Hanns Holger Rutz. It is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation. This software is distributed in the hope that it will be useful, but <STRONG>without any warranty</STRONG>; without even the implied warranty of <strong>merchantability</strong> or <strong>fitness for a particular purpose</strong>. See the <A HREF="../licenses/Eisenkraut-License.txt">GNU General Public License</A> for more details.
 </P>
 <P>
-This software comes with a few free libraries which are included in the main jar file in binary (class) format. In case of the Eisenkraut source distribution, they appear as separate jar files in the <code>libraries</code> folder. Their sourcecode is publically available on the net or -- in consonance with &sect;6 b of the LGPL -- on request through the author. these libraries are:
+This software comes with a few free libraries which are included in the main jar file in binary (class) format. In case of the Eisenkraut source distribution, they appear as separate jar files in the <code>libraries</code> folder. Their sourcecode is publicly available on the net or -- in consonance with &sect;6 b of the LGPL -- on request through the author. these libraries are:
 </P>
 <UL>
 <LI><A HREF="http://www.sciss.de/jcollider/" CLASS="ext">JCollider</A> which provides the infrastructure to control SuperCollider. <A HREF="../licenses/JCollider-License.txt">GPL</A>.</LI>
@@ -19,7 +19,7 @@ This software comes with a few free libraries which are included in the main jar
 <LI><A HREF="http://homepage.mac.com/sroy/mrjadapter/" CLASS="ext">MRJAdapter</A> by Steve Roy, which improves Mac OS look-and-feel. <A HREF="../licenses/MRJAdapter-License.html">Artistic License</A></LI>
 </UL>
 <P>
-Eisenkraut makes use of the following third party sourcecodes:
+Eisenkraut makes use of the following third party source-codes:
 </P>
 <UL>
 <!-- <LI><A HREF="http://astronomy.swin.edu.au/~pbourke/fractals/noise/" CLASS="ext">Parametric Noise Generator</A> by Paul Bourke.</LI> -->
@@ -27,20 +27,7 @@ Eisenkraut makes use of the following third party sourcecodes:
 </UL>
 <h3>Contact</h3>
 <P>
-The preferred way to communicate about Eisenkraut is to use the <A HREF="http://sourceforge.net/mail/?group_id=132039" CLASS="ext">eisenkraut-users mailing list</A>.
-</P><P>
-Though I give no guarantees about whether or when I reply to mails and requests, I try to answer all questions and I am happy to receive feedback concerning this programme. Also some people send me CDs with their music, I very much appreciate that.
-</P><P>
-To contact me, write an email to <code>contact&nbsp;at&nbsp;sciss.de</code>. Snail mail address is:</P>
-<BLOCKQUOTE>
-Hanns Holger Rutz<br>
-13 Nepean Street<br>
-PL2 1QJ<br>
-Plymouth, Devon<br>
-United Kingdom
-</BLOCKQUOTE>
-<P>
-Before sending snail mail, contact me electronically to ensure the address is still valid.
+Please use the contact information provided on <A HREF="https://github.com/Sciss/Eisenkraut" CLASS="ext">github.com/Sciss/Eisenkraut</A>.
 </P>
 </body>
 </html>
