--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -28,7 +28,7 @@ The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Comma
 <LI><tt>F1 ... F3</tt> : select <A HREF="ToolEditModes.html">edit mode</A></LI>
 <LI><tt>F5 ... F6</tt> : select <A HREF="TimelineTools.html">tool</A></LI>
 <LI><tt>Escape</tt> : cancel tool gesture (depends on selected tool)</LI>
-<LI><tt>Caps lock</tt> : toggle <A HREF="ToolBlending.html">blending mode</A></LI>
+<LI><tt>B</tt> : toggle <A HREF="ToolBlending.html">blending mode</A></LI>
 <LI><tt>V</tt> : toggle <A HREF="ToolCatch.html">catch mode</A></LI>
 </UL>
 <P>&nbsp;&nbsp;&nbsp;<B>Selection and Navigation</B>:</P>
